# leah_birthday

./: .gitignore  pyproject.toml
leah-birthday-image/: filepaths.txt  handler.py  main.py  package-lock.json  serverless.yml
leah-birthday-image/poems/: cloudy.txt  cloudy_in.txt  hot.txt  hot_in.txt  partlyCloudy_disable_with_in.txt  process_discover_poetry.py  rainy.txt
